--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ main{
     margin: 60px;
     /* font-family: 'Roboto', sans-serif;  */
     font-family: 'Poppins', sans-serif;
+    height: auto;
 }
 h1, h2, h3, h4, h5{
     font-family: 'Roboto', sans-serif;  
@@ -20,7 +21,7 @@ h1, h2, h3, h4, h5{
 }
 button{
     padding: 13px 35px;
-    border: 2px solid black;
+    border: 2px solid rgb(243, 243, 237);
     /* background-color: #e02c6d;  */
     background: #000;
     border-radius: 30px;
@@ -70,6 +71,7 @@ button:hover{
 
 /* ======== journey part start 02 ======== */
 .journey-area{
+  
      display: grid;
      grid-template-columns: repeat(1,1fr);
      grid-template-rows: repeat(1,1fr);
@@ -85,10 +87,12 @@ button:hover{
     margin-right: 10px;
 }
 .journey-content h1{
-    color: #3A3A3A;
     text-transform: capitalize;
     font-size: 34px;
     line-height: 60px;
+    color: rgb(19, 19, 17);
+    /* color: #333e48; */
+    /* color: #551A8B; */
     
 }
 .journey-content p{
@@ -105,6 +109,11 @@ button:hover{
     border: 2px solid black;
     border-radius: 50%;
 }
+.journey-portion:hover .journey-images img{
+    transition: .3s ease-in;
+    transform: rotate(-30deg);
+    transform-origin:center;
+}
 
 /* ======== journey part end  02 ======== */
 /* ======== brand section start 03 ======== */
@@ -112,18 +121,17 @@ button:hover{
     margin-top: 40px;
     display:grid;
     grid-template-columns: repeat(1,1fr);
+    grid-gap: 30px;
+    /* place-items: center; */
 }
 .brand hr{
     width: 100%;
-    border: 1px solid #a1a1a1;
 }
 .brand-portion{
     display: flex;
     justify-content: space-evenly;
 }
-.brand-portion img{
-    padding: 20px 0;
-}
+
 /* ======== brand section end 03 ======== */
 /* ======== popular collection start 04 */
 .popular-collection-portion h2{
@@ -201,16 +209,76 @@ button:hover{
  }
 
 /* ======== popular collection start 04 */
+.electro-care-area{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-template-rows: repeat(1,1fr);
+    grid-gap: 30px;
+    place-items: center;
+}
+.electro-care-area a{
+    text-decoration: none;
+
+}
+.electro-care-area h1{
+    font-size: 32px;
+    margin-bottom: 20px;
+    text-transform: capitalize;
+    line-height: 30px;
+}
+.first h2{
+    font-size:24px;
+    color: #000;
+    line-height: 40px;
+    text-transform: capitalize;
 
 
+}
+.first p{
+    font-size: 15px;
+    line-height: 30px;
+    color: #333e48;
+    letter-spacing: 1px;
+}
+.electro-care-area img{
+    width: 100px;
+    height: 100px;
+    margin-right: 20px;
+}
+.first-content{
+    display: flex;
+    align-items: center;
+    
+}
+.first-content-area h4{
+    font-size: 18px;
+    /* display: inline-block; */
+    text-transform: capitalize;
+}
+.first-content-area h1{
+    font-size: 20px;
+    text-transform: capitalize;
+    display: inline-block;
+    font-weight: 400;
+}
+
+.electro-care-area ul li{
+    list-style: none;
+}
+.electro-care-area ul li a{
+    list-style: none;
+    color: #333e48;
+    text-transform: capitalize;
+    font-size: 15px;
+}
 
 
-/* ======== popular collection start 04 */
-
-/* ======== popular collection start 04 */
+/* ======== popular collection end 04 */
 /* ======== footer start 04 */
-.footer-portion{
+footer{
     height: 150px;
+}
+.footer-portion{
     text-align:center;
     padding: 50px 0;
     background: #041E42;
@@ -234,12 +302,16 @@ button:hover{
    color: orange;
    font-size: 18px;
    margin-top: 10px;
+   transition: .3s ease-in;
+}
+.icons i:hover{
+    color: #f7ecec;
 }
 
 /* ======== footer end  04 */
 /* ======== responsive start  */
 @media(max-width:992px){
-
+   
     .header-area .nav{
         display: none;
     }
@@ -247,7 +319,7 @@ button:hover{
         width: 100%;
         text-align: center;
     }
-    .popular-collection{
+    .popular-collection, .electro-care-area{
         display:grid;
         grid-gap: 30px;
         place-items: center;
@@ -257,6 +329,7 @@ button:hover{
         height: 100%;
         width: 100%;
    
+    }
 }
 @media only screen and (max-width:892px) {
     .journey-content h1{
@@ -267,38 +340,11 @@ button:hover{
         font-size: 15px;
         line-height: 30px;
      }
-     /* .journey-images img{
-          height: 100%;
-          width: 100%;
-
-     } */
      .brand-portion img{
         height: 60px;
         width: 60px;
      }
-     /* .brand-area{
-         display: grid;
-         grid-template-columns: repeat(1,1fr);
-         grid-template-rows: repeat(2,1fr);
-        grid-gap: 30px;  
-   }
-   .brand-portion img{
-           display: flex;
-           justify-content: center;
-
-
-   } */
-   /* .footer-portion{
-       padding-bottom: 50px!important;
-   }
-   .icons{
-       padding-bottom: 50px;
-       margin-bottom: 50px;
-   } */
 }
-/* @media only (min-width:340px) screen  and (max-width:992px){
-
-} */
 @media only screen  and (max-width:600px){
 
     .journey-portion{
@@ -311,27 +357,25 @@ button:hover{
     .journey-images{
        margin-top:50px;
     }
-    .brand{
+    /* .brand{
         display: none;
-    }
+    } */
 
-    .popular-collection{
+    .popular-collection , .electro-care-area, .journey-content{
         display:grid;
         grid-gap: 30px;
         place-items: center;
         grid-template-columns: repeat(1,1fr)
     }
-    .journey-content{
+    /* .brand-area{
         display:grid;
         grid-template-columns: repeat(1,1fr);
-        /* grid-template-rows: repeat(2,1fr); */
+        grid-template-rows: repeat(7,1fr);
         grid-gap: 30px;
-    }
-    .journey-content h1{
-        line-height: 0;
-        display: inline-block;
-        margin:0;
-        font-size: 30px;
+    }    */
+    .brand-area img:nth-child(odd){
+        display:none;
     }
 }
+
 /* ======== responsive end  */
